--- a/package.json
+++ b/package.json
@@ -8,7 +8,17 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "format": "prettier --write 'src/**/*.{js,jsx,css,md,json}'"
+    "format": "prettier --write 'src/**/*.{js,jsx,css,md,json}'",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "src/**/*.{css,md,json,html}": [
+      "prettier --write"
+    ]
   },
   "dependencies": {
     "firebase": "^11.0.1",
