--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     ]
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.0.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "express": "^4.21.1",
     "firebase": "^11.0.1",
+    "framer-motion": "^11.11.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
