--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "drinking-party-app",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "start": "node server.js",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write 'src/**/*.{js,jsx,css,md,json}'",
     "prepare": "husky install"
