--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "start": "node server.js",
+    "server": "nodemon server.js",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write 'src/**/*.{js,jsx,css,md,json}'",
     "prepare": "husky install"
@@ -46,6 +47,7 @@
     "globals": "^15.11.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
+    "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
     "vite": "^5.4.9"
   }
