--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
+    "@mui/x-date-pickers": "^7.22.0",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "express": "^4.21.1",
     "firebase": "^11.0.1",
     "framer-motion": "^11.11.10",
